<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_generator">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Services.Generator">

    <androidx.constraintlayout.ConstraintLayout
        android:id="@+id/place_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Spinner
            android:id="@+id/spn_place"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/style_asansor_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etx_description_karshenas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/style_asansor_corner"
            android:gravity="top"
            android:hint="توضیحی که نیاز است متخصص باید بداند"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/color_hint"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_place" />

        <EditText
            android:id="@+id/etx_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/style_asansor_corner"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/Address"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/color_hint"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_description_karshenas" />

        <EditText
            android:id="@+id/etx_alley"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/style_asansor_corner"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Alley"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/color_hint"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etx_unit"
            app:layout_constraintTop_toBottomOf="@+id/etx_address" />

        <EditText
            android:id="@+id/etx_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/style_asansor_corner"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/unit"
            android:inputType="number"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/color_hint"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/etx_alley"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etx_plaque"
            app:layout_constraintTop_toBottomOf="@+id/etx_address" />

        <EditText
            android:id="@+id/etx_plaque"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/style_asansor_corner"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tag"
            android:inputType="number"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/color_hint"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/etx_unit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_address" />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/style_asansor_corner"
            android:drawableStart="@drawable/ic_location"
            android:onClick="GoToLocation"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/Location"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_unit"
            tools:ignore="RtlCompat" />


        <EditText
            android:id="@+id/etx_description_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/style_asansor_corner"
            android:gravity="top"
            android:hint="@string/Description"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/color_hint"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_location" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/style_asansor_corner"
            android:drawableStart="@drawable/ic_arrow_left_blue"
            android:gravity="right"
            android:onClick="GoToTime"
            android:paddingStart="15dp"
            android:paddingTop="@dimen/dimen_lvl2"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_description_address"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.ConstraintLayout>
</ScrollView>





    <ir.basalam.rtlnavigationview.RtlNavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="right"
        android:fitsSystemWindows="true"
        app:rtl_menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"/>

</androidx.core.widget.DrawerLayout>
